Got camera capture to work
Beware of passing data from other windows! Those objects are created in
a different "realm" and their instanceof will fail!

--- a/.build/html/camera.html
+++ b/.build/html/camera.html
@@ -92,7 +92,7 @@
                         captureData = buffer;
                         window.close();
                     }),
-                "image/jpg");
+                "image/jpeg");
             }
 
             window.addEventListener("beforeunload", () => {
